IMLEC-39 Fix contentbox Error

--- a/clock/index.html
+++ b/clock/index.html
@@ -2,8 +2,8 @@
 <html lang="en_GB">
 <head>
     <title>IMLEC Clock</title>
-    <link rel="stylesheet" href="imlec.css"/>
-    <script type="text/javascript" src="lbjs.js"></script>
+    <link rel="stylesheet" href="clock/imlec.css"/>
+    <script type="text/javascript" src="clock/lbjs.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 <body>
@@ -15,8 +15,8 @@
 <script type="application/ecmascript">
   window.c_start = 30 * 60;
 </script>
-<script type="application/ecmascript" src="components.js"></script>
-<script type="application/ecmascript" src="app.js"></script>
-<script type="application/ecmascript" src="logic.js"></script>
+<script type="application/ecmascript" src="clock/components.js"></script>
+<script type="application/ecmascript" src="clock/app.js"></script>
+<script type="application/ecmascript" src="clock/logic.js"></script>
 </body>
 </html>
